force-app/main/default/objects/BOM_Lines__c/BOM_Lines__c.object-meta.xml
<CustomObject>
    <label>BOM Line</label>
    <nameField>
        <displayFormat>BOML-{0000000}</displayFormat>
        <label>BOM Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOM Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>