force-app/main/default/objects/BOM_Lines__c/fields/Available_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Available_Inventory__c</fullName>
    <formula>Product__r.Available_Inventory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Inventory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>