force-app/main/default/objects/BOM_Lines__c/fields/Bill_of_Material__c.field-meta.xml
<CustomField>
    <fullName>Bill_of_Material__c</fullName>
    <label>Bill of Material</label>
    <referenceTo>Bill_of_Materials__c</referenceTo>
    <relationshipLabel>BOM Lines</relationshipLabel>
    <relationshipName>BOM_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>