force-app/main/default/objects/BOM_Lines__c/fields/BOM_Notes__c.field-meta.xml
<CustomField>
    <fullName>BOM_Notes__c</fullName>
    <label>BOM Notes</label>
    <type>TextArea</type>
</CustomField>