force-app/main/default/objects/BOM_Lines__c/fields/Ext_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ext_Cost__c</fullName>
    <formula>Qty_Per__c *  Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ext Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>