force-app/main/default/objects/BOM_Lines__c/fields/Producer_Name__c.field-meta.xml
<CustomField>
    <fullName>Producer_Name__c</fullName>
    <formula>Product__r.Producer_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producer Name</label>
    <type>Text</type>
</CustomField>