force-app/main/default/objects/BOM_Lines__c/fields/Qty_Per__c.field-meta.xml
<CustomField>
    <fullName>Qty_Per__c</fullName>
    <label>Qty Per</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>