force-app/main/default/objects/BOM_Lines__c/fields/Required_Qty__c.field-meta.xml
<CustomField>
    <fullName>Required_Qty__c</fullName>
    <formula>Qty_Per__c +  Yield_Lost_Qty__c +  Scrap_Lost_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>