force-app/main/default/objects/BOM_Lines__c/fields/Required_Qty_g__c.field-meta.xml
<CustomField>
    <fullName>Required_Qty_g__c</fullName>
    <formula>(Required_Qty__c * 453.6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Qty (g)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>