force-app/main/default/objects/BOM_Lines__c/fields/Scrap_Factor__c.field-meta.xml
<CustomField>
    <fullName>Scrap_Factor__c</fullName>
    <label>Scrap Factor (%)</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>