force-app/main/default/objects/BOM_Lines__c/fields/Scrap_Lost_Qty__c.field-meta.xml
<CustomField>
    <fullName>Scrap_Lost_Qty__c</fullName>
    <formula>Qty_Per__c *  Scrap_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scrap Lost Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>