force-app/main/default/objects/BOM_Lines__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>