force-app/main/default/objects/BOM_Lines__c/fields/Yield_Factor__c.field-meta.xml
<CustomField>
    <fullName>Yield_Factor__c</fullName>
    <label>Yield Factor (%)</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>