force-app/main/default/objects/BOM_Lines__c/fields/Yield_Lost_Qty__c.field-meta.xml
<CustomField>
    <fullName>Yield_Lost_Qty__c</fullName>
    <formula>Qty_Per__c - Qty_Per__c * Yield_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yield Lost Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>